# sphinx-lesson

./: .buildinfo  .gitignore  01_intro.rst  02_rst_tests.rst  03_md_tests.md  04_executing.md  05_jupyter.ipynb  06_convert-old-lesson.rst  LICENSE  README.rst  building.rst  conf.py  directives.rst  figures.rst  general.rst  getting-started.rst  guide.rst  index.rst  installation.rst  jupyter.ipynb  md-and-rst.rst  objects.inv  pyproject.toml  requirements.txt  rst-to-myst-config.yaml  searchindex.js  setup.py  substitutions-replacements.rst  toctree.rst
.github/workflows/: release.yml  sphinx.yml  test.yml
_sources/: building.md.txt  executing-code.md.txt  gh-action.rst.txt  jupyter.ipynb.txt  md-transforms.rst.txt
branch/master/: .buildinfo  coderefinery-sphinx-lesson.epub  index.html  objects.inv  searchindex.js
branch/pydata-sphinx-theme/: .buildinfo  index.html  objects.inv  searchindex.js
branch/rkdarst--docutils-bug/: .buildinfo  index.html  objects.inv  searchindex.js
branch/rkdarst--exercise-list-pending_xref/: .buildinfo  index.html  objects.inv  searchindex.js
branch/rkdarst--exercise-list-selectors/: .buildinfo  index.html  objects.inv  searchindex.js
branch/rkdarst--sample-episode-md/: index.html  (+2 more)
building/: index.html
changelog/: index.html
content/: building.md  building.rst  changelog.md  changelog.rst  cheatsheet.md  conf.py  contributing-to-a-lesson.md  contributing-to-a-lesson.rst  convert-old-lessons.md  convert-old-lessons.rst  directives.md  directives.rst  exercise-list.md  exercise-list.rst  figures.rst  getting-started.md  getting-started.rst  gh-action.md  gh-action.rst  index.md  index.rst  indexing.md  indexing.rst  installation.md  installation.rst  intersphinx.md  intersphinx.rst  md-and-rst.md  md-transforms.md  presentation-mode.md  presentation-mode.rst  sample-episode-md.md  sample-episode-myst.md  sample-episode-rst.rst  substitutions-replacements.md  toctree.md
contributing-to-a-lesson/: index.html
convert-old-lessons/: index.html
directives/: index.html
executing-code/: index.html
exercise-list/: index.html
figures/: index.html
genindex/: index.html
getting-started/: index.html
indexing/: index.html
installation/: index.html
intersphinx/: index.html
jupyter/: index.html
md-and-rst/: index.html
md-transforms/: index.html
presentation-mode/: index.html
sample-episode-rst/: index.html
search/: index.html
singlehtml/: index.html  objects.inv
sphinx-common/: requirements.txt
sphinx_lesson/: __init__.py  directives.py  exerciselist.py  md_transforms.py  sphinx.py  term_role_formatting.py
substitutions-replacements/: index.html
toctree/: index.html
(+234 files in other folders)
