[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "sphinx_lesson"

[project]
name = "sphinx-lesson"
authors = [{name = "Richard Darst"}]  # FIXME
readme = "README.rst"
license = {file = "LICENSE"}
# https://pypi.org/classifiers/
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Operating System :: OS Independent",
    ]
keywords = ["sphinx-extension"]
requires-python = ">=3.3"
dynamic = ["version", "description"]
dependencies = [
    # FIXME
    "sphinx!=5.2.0.post0",    # remove after next release
    "sphinx_rtd_theme",
    "sphinx_copybutton",
    "sphinx_minipres",
    "sphinx_tabs",
    "sphinx_togglebutton>=0.2.0",
    "sphinx-autobuild",
    #"myst_parser[sphinx]",
    "myst_nb>0.8.3",
    "sphinx_rtd_theme_ext_color_contrast",
]

