[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "sphinx_lesson"

[project]
name = "sphinx-lesson"
authors = [{name = "Richard Darst"}]  # FIXME
readme = "README.rst"
license = {file = "LICENSE"}
# https://pypi.org/classifiers/
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Operating System :: OS Independent",
    ]
keywords = ["sphinx-extension"]
requires-python = ">=3.3"
dynamic = ["version", "description"]
dependencies = [
    # FIXME
    "sphinx<8",    # https://github.com/coderefinery/train-the-trainer/pull/104
    "sphinx_rtd_theme",
    "sphinx_copybutton",
    "sphinx_minipres",
    "sphinx_tabs",
    "sphinx_togglebutton>=0.2.0",
    "sphinx-autobuild",
    #"myst_parser[sphinx]",
    "myst_nb>0.8.3",
    "sphinx_rtd_theme_ext_color_contrast",
]

#[project.optional-dependencies]
#test = [
#    # FIXME
#    "pytest",
#]

[project.urls]
Repository = "https://github.com/coderefinery/sphinx-lesson"
Documentation = "https://coderefinery.github.io/sphinx-lesson/"


# https://flit.pypa.io/en/latest/upload.html
# flit build
# You need to configure a .pypirc file for test upload, or use environment variables:
# https://flit.pypa.io/en/latest/upload.html#using-pypirc
# flit publish --repository testpypi
# or:   FLIT_INDEX_URL=https://test.pypi.org/legacy/ FLIT_USERNAME=xxx and FLIT_PASSWORD=xxx flit publish
# flit publish
